Fix 'Enforce palette colors' feature

Since the 'Enforce palette colors' is a feature of the internal color
selector, this commit moves the functionality from KisPaletteView to
KisDlgInternalColorSelector. Also, that way the color change is forced
only once upon foreground color change, preventing cycling signals and confusing color changes
(KisPaletteView can be used more than once with different color palettes).

Removes KisPaletteView::slotFGColorResourceChanged, the function is
obsolete: it was meant to solve bug 402072 that is now fixed in a better way.

BACKPORT:krita/4.2
BUG:408256
CCBUG:402072